--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="./smartquotes.js"></script>
 </head>
 <body>
+    <div id="content">
+
     <h1>Zermelo-Fraenkel Set Theory</h1>
 
     <h2>Axioms</h2>
@@ -18,7 +20,7 @@
             <p>The axiom of <b>extensionality</b> states that two sets are equal
             if they have the same elements.</p>
             <p class=jax>
-                $$ \forall x \forall y [\forall z(z \in x \iff z \in y) \implies x = y] $$
+                $$ \forall x\, \forall y [\forall z(z \in x \iff z \in y) \implies x = y] $$
             </p>
         </li>
         <li>
@@ -28,6 +30,9 @@
             <p class=jax>
                 $$ \forall x (x \ne \varnothing \implies \exists y \in x (y \cap x = \varnothing)) $$
             </p>
+            <p>For instance, the set \(\{1, 2, 3, 4\}\) is disjoint from its
+            member \(1\), since (in set theory, at least), '1' is simply
+            shorthand for \(\{\varnothing\}\).<a class="fr" href="#f1">1</a></p>
         </li>
         <li>
             <p>The axiom of <b>separation</b> is necessary to avoid
@@ -37,15 +42,35 @@
             only the terms which satisfy a particular formula. Formally written,
             Frege's definition is:</p>
             <p class=jax>
-                $$ (\exists x) (\forall y) [F(y) \implies (y \in x)] $$
+                $$ \exists x\, \forall y [F(y) \implies (y \in x)] $$
             </p>
             <p>The problem with Frege's definition is that it merely
             <i>assumes</i> the existence of the superset \(x\); the axiom of
             separation in Zermelo-Fraenkel, on the other hand is
             <i>conditional</i> on its existence:</p>
             <p class=jax>
-                $$ (\forall x) (\exists y) (\forall z) [((z \in x) \land F(z)) \implies (z \in y)] $$
+                $$ \forall x\, \exists y\, \forall z [((z \in x) \land F(z)) \implies (z \in y)] $$
             </p>
+        </li>
+        <li>
+            <p>The <b>power set</b> axiom defines a 'power set' as a set
+            containing all the subsets (including \(\varnothing\)) of another
+            set.</p>
+            <p class=jax>
+                $$ \forall x\, \exists y\, \forall z (z \subseteq x \implies z \in y) $$
+            </p>
+            <p><i>For example:</i> the power set of \(\{a,b,c\,\}\) is:</p>
+            <p class=jax>
+                $$ \{\{a\},\{b\},\{c\},\{a,b\,\},\{a,c\,\},\{b,c\,\},\{a,b,c\,\},\{\varnothing\}\} $$
+            </p>
+    </ol>
+
+    </div>
+
+    <ol id="footnotes">
+        <li id="f1">
+            In ZFC, integers are taken as shorthand for members of the sequence
+            \(\varnothing,\{\varnothing\},\{\{\varnothing\}\},\{\{\{\varnothing\}\}\},...\)
         </li>
     </ol>
 
